--- a/frontend/styles/landing.css
+++ b/frontend/styles/landing.css
@@ -10,6 +10,7 @@ html {
 
 body {
   height: 100vh;
+  width: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -32,7 +33,8 @@ a {
 /* HEADER */
 .main-header {
   position: absolute;
-  top: 24px;
+  top: 0px;
+  margin-top: 16px;
   left: 24px;
   z-index: 1000;
 }
@@ -84,6 +86,7 @@ a {
   object-position: 100% center;
 }
 
+
 @media screen and (max-width: 1200px) {
   .video-container video {
     object-position: 90% center;
@@ -103,7 +106,7 @@ a {
     width: 100%;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 12px 24px;
+    padding: 12px 0px 12px 24px;
     left: 0px;
   }
 
